# Joshua

./: .gitignore  CMakeLists.txt  CMakePresets.json  Info.plist.in  README.md
.amazonq/.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
.github/.github/workflows/: buil-cpp-windows.yml  build-cpp-linux.yml  build-cpp-mac.yml  build-linux.yml  build-mac.yml  build-windows.yml
.github/workflows/: build-cpp-linux.yml  build-cpp-mac.yml  build-cpp-windows.yml
resources/: app_icon.rc  joshua-mime.xml  joshua.desktop  resources.qrc
resources/icons/: app_icon.icns
src/: AboutDialog.cpp  AboutDialog.h  BlackjackWindow.cpp  BlackjackWindow.h  BouncingProgressBar.cpp  BouncingProgressBar.h  CheckersEndgame.cpp  CheckersEndgame.h  CheckersWindow.cpp  CheckersWindow.h  ChessWindow.cpp  ChessWindow.h  FourAcrossWindow.cpp  FourAcrossWindow.h  GoWindow.cpp  GoWindow.h  License.h  LicenseDialog.cpp  LicenseDialog.h  LicenseValidator.cpp  LicenseValidator.h  MainWindow.cpp  MainWindow.h  PokerWindow.cpp  PokerWindow.h  ReversiWindow.cpp  ReversiWindow.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SplashScreen.cpp  SplashScreen.h  ThermonuclearWarWindow.cpp  ThermonuclearWarWindow.h  TicTacToeWindow.cpp  TicTacToeWindow.h  Utilities.cpp  Utilities.h  WorldCoastline.h  (+3 more)
ui/: AboutDialog.ui  LicenseDialog.ui  MainWindow.ui  SettingsDialog.ui
